# advent-of-spin-2023-c2

./: .gitignore  Cargo.toml  README.md  go.mod  justfile  main.go  spin.toml
src/: lib.rs
